# bplib

./: CMakeLists.txt  UPDATE.md
stor/: README.html  README.md  file-offload-api.docx  file-offload-api.html  file-offload-api.md
stor/store/: CMakeLists.txt
stor/store/ut-coverage/: CMakeLists.txt  test_bplib_file_offload.c  test_bplib_file_offload.h  test_bplib_file_offload_setup.c
stor/store/ut-stubs/: CMakeLists.txt  bplib_file_offload_stubs.c
